# transformer_dreamer_controller_plugin

nav2_transformer_dreamer_controller/: CMakeLists.txt  README.md
nav2_transformer_dreamer_controller/config/: configs.py
nav2_transformer_dreamer_controller/documentation/: adapting_for_your_application.md  model_design.md  training.md  using_plugin.md
nav2_transformer_dreamer_controller/env/: __init__.py  nav2_gz.py  tools.py  vehicle_model.py
nav2_transformer_dreamer_controller/include/nav2_dt_planner/: transformer_dreamer_controller.h
nav2_transformer_dreamer_controller/models/transDreamer/: configs.py  train.py
nav2_transformer_dreamer_controller/models/transDreamer/model/: __init__.py  modules.py  transdreamer.py  transformer.py  utils.py
nav2_transformer_dreamer_controller/msg/action/: TrainToCmd.action
nav2_transformer_dreamer_controller/scripts/: controller_node.py  train.py  train_google_colab.ipynb
nav2_transformer_dreamer_controller/src/: transformer_dreamer_controller.cpp
